parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program statement
Rule 2     program -> statement
Rule 3     statement -> print_statement
Rule 4     statement -> comp_statement
Rule 5     statement -> logic_statement
Rule 6     statement -> while_statement
Rule 7     statement -> if_statement
Rule 8     statement -> LLAVEA INT block_decl
Rule 9     block_decl -> ID LLAVEC
Rule 10    block_decl -> ID OR other_decl
Rule 11    other_decl -> block_decl
Rule 12    statement -> ID ASIG expression
Rule 13    expression -> term
Rule 14    expression -> expression SUMA term
Rule 15    expression -> expression RESTA term
Rule 16    term -> factor
Rule 17    term -> term MULT factor
Rule 18    term -> term DIV factor
Rule 19    factor -> PARA expression PARC
Rule 20    factor -> CTE
Rule 21    factor -> ID
Rule 22    print_statement -> PRINT PARA expression PARC
Rule 23    comp_statement -> expression IGUALA factor
Rule 24    comp_statement -> expression DIST factor
Rule 25    comp_statement -> expression MENOR factor
Rule 26    comp_statement -> expression MENORIGUAL factor
Rule 27    comp_statement -> expression MAYOR factor
Rule 28    comp_statement -> expression MAYORIGUAL factor
Rule 29    logic_statement -> comp_statement OR comp_expression
Rule 30    logic_statement -> comp_statement AND comp_expression
Rule 31    comp_expression -> comp_statement
Rule 32    while_statement -> WHILE PARA comp_statement PARC LLAVEA sub_program
Rule 33    while_statement -> WHILE PARA logic_statement PARC LLAVEA sub_program
Rule 34    sub_program -> program LLAVEC
Rule 35    if_statement -> IF PARA comp_statement PARC LLAVEA sub_program else_statement
Rule 36    if_statement -> IF PARA logic_statement PARC LLAVEA sub_program else_statement
Rule 37    else_statement -> ELSE LLAVEA sub_program
Rule 38    else_statement -> empty
Rule 39    empty -> <empty>

Terminals, with rules where they appear

AND                  : 30
ASIG                 : 12
CTE                  : 20
DIST                 : 24
DIV                  : 18
ELSE                 : 37
ID                   : 9 10 12 21
IF                   : 35 36
IGUALA               : 23
INT                  : 8
LLAVEA               : 8 32 33 35 36 37
LLAVEC               : 9 34
MAYOR                : 27
MAYORIGUAL           : 28
MENOR                : 25
MENORIGUAL           : 26
MULT                 : 17
OR                   : 10 29
PARA                 : 19 22 32 33 35 36
PARC                 : 19 22 32 33 35 36
PRINT                : 22
RESTA                : 15
SUMA                 : 14
WHILE                : 32 33
error                : 

Nonterminals, with rules where they appear

block_decl           : 8 11
comp_expression      : 29 30
comp_statement       : 4 29 30 31 32 35
else_statement       : 35 36
empty                : 38
expression           : 12 14 15 19 22 23 24 25 26 27 28
factor               : 16 17 18 23 24 25 26 27 28
if_statement         : 7
logic_statement      : 5 33 36
other_decl           : 10
print_statement      : 3
program              : 1 34 0
statement            : 1 2
sub_program          : 32 33 35 36 37
term                 : 13 14 15 17 18
while_statement      : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program statement
    (2) program -> . statement
    (3) statement -> . print_statement
    (4) statement -> . comp_statement
    (5) statement -> . logic_statement
    (6) statement -> . while_statement
    (7) statement -> . if_statement
    (8) statement -> . LLAVEA INT block_decl
    (12) statement -> . ID ASIG expression
    (22) print_statement -> . PRINT PARA expression PARC
    (23) comp_statement -> . expression IGUALA factor
    (24) comp_statement -> . expression DIST factor
    (25) comp_statement -> . expression MENOR factor
    (26) comp_statement -> . expression MENORIGUAL factor
    (27) comp_statement -> . expression MAYOR factor
    (28) comp_statement -> . expression MAYORIGUAL factor
    (29) logic_statement -> . comp_statement OR comp_expression
    (30) logic_statement -> . comp_statement AND comp_expression
    (32) while_statement -> . WHILE PARA comp_statement PARC LLAVEA sub_program
    (33) while_statement -> . WHILE PARA logic_statement PARC LLAVEA sub_program
    (35) if_statement -> . IF PARA comp_statement PARC LLAVEA sub_program else_statement
    (36) if_statement -> . IF PARA logic_statement PARC LLAVEA sub_program else_statement
    (13) expression -> . term
    (14) expression -> . expression SUMA term
    (15) expression -> . expression RESTA term
    (16) term -> . factor
    (17) term -> . term MULT factor
    (18) term -> . term DIV factor
    (19) factor -> . PARA expression PARC
    (20) factor -> . CTE
    (21) factor -> . ID

    LLAVEA          shift and go to state 8
    ID              shift and go to state 9
    PRINT           shift and go to state 11
    WHILE           shift and go to state 14
    IF              shift and go to state 15
    PARA            shift and go to state 12
    CTE             shift and go to state 17

    program                        shift and go to state 1
    statement                      shift and go to state 2
    print_statement                shift and go to state 3
    comp_statement                 shift and go to state 4
    logic_statement                shift and go to state 5
    while_statement                shift and go to state 6
    if_statement                   shift and go to state 7
    expression                     shift and go to state 10
    factor                         shift and go to state 13
    term                           shift and go to state 16

state 1

    (0) S' -> program .
    (1) program -> program . statement
    (3) statement -> . print_statement
    (4) statement -> . comp_statement
    (5) statement -> . logic_statement
    (6) statement -> . while_statement
    (7) statement -> . if_statement
    (8) statement -> . LLAVEA INT block_decl
    (12) statement -> . ID ASIG expression
    (22) print_statement -> . PRINT PARA expression PARC
    (23) comp_statement -> . expression IGUALA factor
    (24) comp_statement -> . expression DIST factor
    (25) comp_statement -> . expression MENOR factor
    (26) comp_statement -> . expression MENORIGUAL factor
    (27) comp_statement -> . expression MAYOR factor
    (28) comp_statement -> . expression MAYORIGUAL factor
    (29) logic_statement -> . comp_statement OR comp_expression
    (30) logic_statement -> . comp_statement AND comp_expression
    (32) while_statement -> . WHILE PARA comp_statement PARC LLAVEA sub_program
    (33) while_statement -> . WHILE PARA logic_statement PARC LLAVEA sub_program
    (35) if_statement -> . IF PARA comp_statement PARC LLAVEA sub_program else_statement
    (36) if_statement -> . IF PARA logic_statement PARC LLAVEA sub_program else_statement
    (13) expression -> . term
    (14) expression -> . expression SUMA term
    (15) expression -> . expression RESTA term
    (16) term -> . factor
    (17) term -> . term MULT factor
    (18) term -> . term DIV factor
    (19) factor -> . PARA expression PARC
    (20) factor -> . CTE
    (21) factor -> . ID

    LLAVEA          shift and go to state 8
    ID              shift and go to state 9
    PRINT           shift and go to state 11
    WHILE           shift and go to state 14
    IF              shift and go to state 15
    PARA            shift and go to state 12
    CTE             shift and go to state 17

    statement                      shift and go to state 18
    print_statement                shift and go to state 3
    comp_statement                 shift and go to state 4
    logic_statement                shift and go to state 5
    while_statement                shift and go to state 6
    if_statement                   shift and go to state 7
    expression                     shift and go to state 10
    factor                         shift and go to state 13
    term                           shift and go to state 16

state 2

    (2) program -> statement .

    LLAVEA          reduce using rule 2 (program -> statement .)
    ID              reduce using rule 2 (program -> statement .)
    PRINT           reduce using rule 2 (program -> statement .)
    WHILE           reduce using rule 2 (program -> statement .)
    IF              reduce using rule 2 (program -> statement .)
    PARA            reduce using rule 2 (program -> statement .)
    CTE             reduce using rule 2 (program -> statement .)
    $end            reduce using rule 2 (program -> statement .)
    LLAVEC          reduce using rule 2 (program -> statement .)


state 3

    (3) statement -> print_statement .

    LLAVEA          reduce using rule 3 (statement -> print_statement .)
    ID              reduce using rule 3 (statement -> print_statement .)
    PRINT           reduce using rule 3 (statement -> print_statement .)
    WHILE           reduce using rule 3 (statement -> print_statement .)
    IF              reduce using rule 3 (statement -> print_statement .)
    PARA            reduce using rule 3 (statement -> print_statement .)
    CTE             reduce using rule 3 (statement -> print_statement .)
    $end            reduce using rule 3 (statement -> print_statement .)
    LLAVEC          reduce using rule 3 (statement -> print_statement .)


state 4

    (4) statement -> comp_statement .
    (29) logic_statement -> comp_statement . OR comp_expression
    (30) logic_statement -> comp_statement . AND comp_expression

    LLAVEA          reduce using rule 4 (statement -> comp_statement .)
    ID              reduce using rule 4 (statement -> comp_statement .)
    PRINT           reduce using rule 4 (statement -> comp_statement .)
    WHILE           reduce using rule 4 (statement -> comp_statement .)
    IF              reduce using rule 4 (statement -> comp_statement .)
    PARA            reduce using rule 4 (statement -> comp_statement .)
    CTE             reduce using rule 4 (statement -> comp_statement .)
    $end            reduce using rule 4 (statement -> comp_statement .)
    LLAVEC          reduce using rule 4 (statement -> comp_statement .)
    OR              shift and go to state 19
    AND             shift and go to state 20


state 5

    (5) statement -> logic_statement .

    LLAVEA          reduce using rule 5 (statement -> logic_statement .)
    ID              reduce using rule 5 (statement -> logic_statement .)
    PRINT           reduce using rule 5 (statement -> logic_statement .)
    WHILE           reduce using rule 5 (statement -> logic_statement .)
    IF              reduce using rule 5 (statement -> logic_statement .)
    PARA            reduce using rule 5 (statement -> logic_statement .)
    CTE             reduce using rule 5 (statement -> logic_statement .)
    $end            reduce using rule 5 (statement -> logic_statement .)
    LLAVEC          reduce using rule 5 (statement -> logic_statement .)


state 6

    (6) statement -> while_statement .

    LLAVEA          reduce using rule 6 (statement -> while_statement .)
    ID              reduce using rule 6 (statement -> while_statement .)
    PRINT           reduce using rule 6 (statement -> while_statement .)
    WHILE           reduce using rule 6 (statement -> while_statement .)
    IF              reduce using rule 6 (statement -> while_statement .)
    PARA            reduce using rule 6 (statement -> while_statement .)
    CTE             reduce using rule 6 (statement -> while_statement .)
    $end            reduce using rule 6 (statement -> while_statement .)
    LLAVEC          reduce using rule 6 (statement -> while_statement .)


state 7

    (7) statement -> if_statement .

    LLAVEA          reduce using rule 7 (statement -> if_statement .)
    ID              reduce using rule 7 (statement -> if_statement .)
    PRINT           reduce using rule 7 (statement -> if_statement .)
    WHILE           reduce using rule 7 (statement -> if_statement .)
    IF              reduce using rule 7 (statement -> if_statement .)
    PARA            reduce using rule 7 (statement -> if_statement .)
    CTE             reduce using rule 7 (statement -> if_statement .)
    $end            reduce using rule 7 (statement -> if_statement .)
    LLAVEC          reduce using rule 7 (statement -> if_statement .)


state 8

    (8) statement -> LLAVEA . INT block_decl

    INT             shift and go to state 21


state 9

    (12) statement -> ID . ASIG expression
    (21) factor -> ID .

    ASIG            shift and go to state 22
    MULT            reduce using rule 21 (factor -> ID .)
    DIV             reduce using rule 21 (factor -> ID .)
    IGUALA          reduce using rule 21 (factor -> ID .)
    DIST            reduce using rule 21 (factor -> ID .)
    MENOR           reduce using rule 21 (factor -> ID .)
    MENORIGUAL      reduce using rule 21 (factor -> ID .)
    MAYOR           reduce using rule 21 (factor -> ID .)
    MAYORIGUAL      reduce using rule 21 (factor -> ID .)
    SUMA            reduce using rule 21 (factor -> ID .)
    RESTA           reduce using rule 21 (factor -> ID .)


state 10

    (23) comp_statement -> expression . IGUALA factor
    (24) comp_statement -> expression . DIST factor
    (25) comp_statement -> expression . MENOR factor
    (26) comp_statement -> expression . MENORIGUAL factor
    (27) comp_statement -> expression . MAYOR factor
    (28) comp_statement -> expression . MAYORIGUAL factor
    (14) expression -> expression . SUMA term
    (15) expression -> expression . RESTA term

    IGUALA          shift and go to state 23
    DIST            shift and go to state 24
    MENOR           shift and go to state 25
    MENORIGUAL      shift and go to state 26
    MAYOR           shift and go to state 27
    MAYORIGUAL      shift and go to state 28
    SUMA            shift and go to state 29
    RESTA           shift and go to state 30


state 11

    (22) print_statement -> PRINT . PARA expression PARC

    PARA            shift and go to state 31


state 12

    (19) factor -> PARA . expression PARC
    (13) expression -> . term
    (14) expression -> . expression SUMA term
    (15) expression -> . expression RESTA term
    (16) term -> . factor
    (17) term -> . term MULT factor
    (18) term -> . term DIV factor
    (19) factor -> . PARA expression PARC
    (20) factor -> . CTE
    (21) factor -> . ID

    PARA            shift and go to state 12
    CTE             shift and go to state 17
    ID              shift and go to state 33

    expression                     shift and go to state 32
    term                           shift and go to state 16
    factor                         shift and go to state 13

state 13

    (16) term -> factor .

    MULT            reduce using rule 16 (term -> factor .)
    DIV             reduce using rule 16 (term -> factor .)
    IGUALA          reduce using rule 16 (term -> factor .)
    DIST            reduce using rule 16 (term -> factor .)
    MENOR           reduce using rule 16 (term -> factor .)
    MENORIGUAL      reduce using rule 16 (term -> factor .)
    MAYOR           reduce using rule 16 (term -> factor .)
    MAYORIGUAL      reduce using rule 16 (term -> factor .)
    SUMA            reduce using rule 16 (term -> factor .)
    RESTA           reduce using rule 16 (term -> factor .)
    PARC            reduce using rule 16 (term -> factor .)
    LLAVEA          reduce using rule 16 (term -> factor .)
    ID              reduce using rule 16 (term -> factor .)
    PRINT           reduce using rule 16 (term -> factor .)
    WHILE           reduce using rule 16 (term -> factor .)
    IF              reduce using rule 16 (term -> factor .)
    PARA            reduce using rule 16 (term -> factor .)
    CTE             reduce using rule 16 (term -> factor .)
    $end            reduce using rule 16 (term -> factor .)
    LLAVEC          reduce using rule 16 (term -> factor .)


state 14

    (32) while_statement -> WHILE . PARA comp_statement PARC LLAVEA sub_program
    (33) while_statement -> WHILE . PARA logic_statement PARC LLAVEA sub_program

    PARA            shift and go to state 34


state 15

    (35) if_statement -> IF . PARA comp_statement PARC LLAVEA sub_program else_statement
    (36) if_statement -> IF . PARA logic_statement PARC LLAVEA sub_program else_statement

    PARA            shift and go to state 35


state 16

    (13) expression -> term .
    (17) term -> term . MULT factor
    (18) term -> term . DIV factor

    IGUALA          reduce using rule 13 (expression -> term .)
    DIST            reduce using rule 13 (expression -> term .)
    MENOR           reduce using rule 13 (expression -> term .)
    MENORIGUAL      reduce using rule 13 (expression -> term .)
    MAYOR           reduce using rule 13 (expression -> term .)
    MAYORIGUAL      reduce using rule 13 (expression -> term .)
    SUMA            reduce using rule 13 (expression -> term .)
    RESTA           reduce using rule 13 (expression -> term .)
    PARC            reduce using rule 13 (expression -> term .)
    LLAVEA          reduce using rule 13 (expression -> term .)
    ID              reduce using rule 13 (expression -> term .)
    PRINT           reduce using rule 13 (expression -> term .)
    WHILE           reduce using rule 13 (expression -> term .)
    IF              reduce using rule 13 (expression -> term .)
    PARA            reduce using rule 13 (expression -> term .)
    CTE             reduce using rule 13 (expression -> term .)
    $end            reduce using rule 13 (expression -> term .)
    LLAVEC          reduce using rule 13 (expression -> term .)
    MULT            shift and go to state 36
    DIV             shift and go to state 37


state 17

    (20) factor -> CTE .

    MULT            reduce using rule 20 (factor -> CTE .)
    DIV             reduce using rule 20 (factor -> CTE .)
    IGUALA          reduce using rule 20 (factor -> CTE .)
    DIST            reduce using rule 20 (factor -> CTE .)
    MENOR           reduce using rule 20 (factor -> CTE .)
    MENORIGUAL      reduce using rule 20 (factor -> CTE .)
    MAYOR           reduce using rule 20 (factor -> CTE .)
    MAYORIGUAL      reduce using rule 20 (factor -> CTE .)
    SUMA            reduce using rule 20 (factor -> CTE .)
    RESTA           reduce using rule 20 (factor -> CTE .)
    PARC            reduce using rule 20 (factor -> CTE .)
    LLAVEA          reduce using rule 20 (factor -> CTE .)
    ID              reduce using rule 20 (factor -> CTE .)
    PRINT           reduce using rule 20 (factor -> CTE .)
    WHILE           reduce using rule 20 (factor -> CTE .)
    IF              reduce using rule 20 (factor -> CTE .)
    PARA            reduce using rule 20 (factor -> CTE .)
    CTE             reduce using rule 20 (factor -> CTE .)
    $end            reduce using rule 20 (factor -> CTE .)
    LLAVEC          reduce using rule 20 (factor -> CTE .)
    OR              reduce using rule 20 (factor -> CTE .)
    AND             reduce using rule 20 (factor -> CTE .)


state 18

    (1) program -> program statement .

    LLAVEA          reduce using rule 1 (program -> program statement .)
    ID              reduce using rule 1 (program -> program statement .)
    PRINT           reduce using rule 1 (program -> program statement .)
    WHILE           reduce using rule 1 (program -> program statement .)
    IF              reduce using rule 1 (program -> program statement .)
    PARA            reduce using rule 1 (program -> program statement .)
    CTE             reduce using rule 1 (program -> program statement .)
    $end            reduce using rule 1 (program -> program statement .)
    LLAVEC          reduce using rule 1 (program -> program statement .)


state 19

    (29) logic_statement -> comp_statement OR . comp_expression
    (31) comp_expression -> . comp_statement
    (23) comp_statement -> . expression IGUALA factor
    (24) comp_statement -> . expression DIST factor
    (25) comp_statement -> . expression MENOR factor
    (26) comp_statement -> . expression MENORIGUAL factor
    (27) comp_statement -> . expression MAYOR factor
    (28) comp_statement -> . expression MAYORIGUAL factor
    (13) expression -> . term
    (14) expression -> . expression SUMA term
    (15) expression -> . expression RESTA term
    (16) term -> . factor
    (17) term -> . term MULT factor
    (18) term -> . term DIV factor
    (19) factor -> . PARA expression PARC
    (20) factor -> . CTE
    (21) factor -> . ID

    PARA            shift and go to state 12
    CTE             shift and go to state 17
    ID              shift and go to state 33

    comp_statement                 shift and go to state 38
    comp_expression                shift and go to state 39
    expression                     shift and go to state 10
    factor                         shift and go to state 13
    term                           shift and go to state 16

state 20

    (30) logic_statement -> comp_statement AND . comp_expression
    (31) comp_expression -> . comp_statement
    (23) comp_statement -> . expression IGUALA factor
    (24) comp_statement -> . expression DIST factor
    (25) comp_statement -> . expression MENOR factor
    (26) comp_statement -> . expression MENORIGUAL factor
    (27) comp_statement -> . expression MAYOR factor
    (28) comp_statement -> . expression MAYORIGUAL factor
    (13) expression -> . term
    (14) expression -> . expression SUMA term
    (15) expression -> . expression RESTA term
    (16) term -> . factor
    (17) term -> . term MULT factor
    (18) term -> . term DIV factor
    (19) factor -> . PARA expression PARC
    (20) factor -> . CTE
    (21) factor -> . ID

    PARA            shift and go to state 12
    CTE             shift and go to state 17
    ID              shift and go to state 33

    comp_statement                 shift and go to state 38
    comp_expression                shift and go to state 40
    expression                     shift and go to state 10
    factor                         shift and go to state 13
    term                           shift and go to state 16

state 21

    (8) statement -> LLAVEA INT . block_decl
    (9) block_decl -> . ID LLAVEC
    (10) block_decl -> . ID OR other_decl

    ID              shift and go to state 42

    block_decl                     shift and go to state 41

state 22

    (12) statement -> ID ASIG . expression
    (13) expression -> . term
    (14) expression -> . expression SUMA term
    (15) expression -> . expression RESTA term
    (16) term -> . factor
    (17) term -> . term MULT factor
    (18) term -> . term DIV factor
    (19) factor -> . PARA expression PARC
    (20) factor -> . CTE
    (21) factor -> . ID

    PARA            shift and go to state 12
    CTE             shift and go to state 17
    ID              shift and go to state 33

    expression                     shift and go to state 43
    term                           shift and go to state 16
    factor                         shift and go to state 13

state 23

    (23) comp_statement -> expression IGUALA . factor
    (19) factor -> . PARA expression PARC
    (20) factor -> . CTE
    (21) factor -> . ID

    PARA            shift and go to state 12
    CTE             shift and go to state 17
    ID              shift and go to state 33

    factor                         shift and go to state 44

state 24

    (24) comp_statement -> expression DIST . factor
    (19) factor -> . PARA expression PARC
    (20) factor -> . CTE
    (21) factor -> . ID

    PARA            shift and go to state 12
    CTE             shift and go to state 17
    ID              shift and go to state 33

    factor                         shift and go to state 45

state 25

    (25) comp_statement -> expression MENOR . factor
    (19) factor -> . PARA expression PARC
    (20) factor -> . CTE
    (21) factor -> . ID

    PARA            shift and go to state 12
    CTE             shift and go to state 17
    ID              shift and go to state 33

    factor                         shift and go to state 46

state 26

    (26) comp_statement -> expression MENORIGUAL . factor
    (19) factor -> . PARA expression PARC
    (20) factor -> . CTE
    (21) factor -> . ID

    PARA            shift and go to state 12
    CTE             shift and go to state 17
    ID              shift and go to state 33

    factor                         shift and go to state 47

state 27

    (27) comp_statement -> expression MAYOR . factor
    (19) factor -> . PARA expression PARC
    (20) factor -> . CTE
    (21) factor -> . ID

    PARA            shift and go to state 12
    CTE             shift and go to state 17
    ID              shift and go to state 33

    factor                         shift and go to state 48

state 28

    (28) comp_statement -> expression MAYORIGUAL . factor
    (19) factor -> . PARA expression PARC
    (20) factor -> . CTE
    (21) factor -> . ID
